--- a/findly-builder/src/app/components/credentials-list/credentials-list.component.html
+++ b/findly-builder/src/app/components/credentials-list/credentials-list.component.html
@@ -54,7 +54,7 @@
                 <div class="col-3 title ">LAST UPDATED</div>
                 <div class="col-3 title">{{"credentials.last_updated" | translate}}<img src="assets/icons/dropdown_gray.svg" class="ml-1"></div>
             </div>
-            <div class="table-body-content row m-0 align-items-center" *ngFor="let data of channnelConguired | filter :[searchcredential, 'appName']" >
+            <div class="table-body-content row m-0 align-items-center" *ngFor="let data of channnelConguired | filter :[searchcredential, 'appName']" (click)="viewDetails(data)" >
                 <!-- (click)="viewDetails()" -->
                 <div class="col-3 title">{{data.appName}}</div>
                 <div class="col-3 title">{{data.appUsage}}</div>
@@ -120,8 +120,8 @@
     </perfect-scrollbar>   
 
     <kr-modal modalType="center"  #editCredentialPop  modalClass="modal_popups_ edit-credentials-popup"> 
-        <div class="modal-header d-none">            
-            <h4 class="modal-title">{{"credentials.edit_credential" | translate}}</h4>
+        <div class="modal-header">    
+            <h4 class="modal-title">{{editCreden.name}}</h4>
             <div class="close_icon" (click)="closeEditModalPopup()"><img src="assets/icons/modal-close.svg"></div>
         </div>    
         
@@ -130,7 +130,7 @@
               <a class="nav-link active" data-toggle="tab" href="#configuration">Configuration</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" data-toggle="tab" href="#APIscopes">API Scopes</a>
+              <a class="nav-link" data-toggle="tab" href="#APIscopes" (click)="getApiScopes()">API Scopes</a>
             </li>           
         </ul> 
         <perfect-scrollbar class="perfect-scroll-modal-body">
@@ -178,7 +178,7 @@
                                 <div class="label-text">Client ID</div>
                                 <div class="input-box-content d-flex align-items-center">
                                     <div class="kr-sg-input-text mr-3">                                       
-                                        <input readonly type="text" placeholder="cs-506d9889-749f-5a68-a100-5b3c5e42da35" class="input-text">                                        
+                                        <input readonly type="text" [value]="editCreden.clientId" class="input-text">                                        
                                     </div>
                                     <button class="kr-sg-button-primary btn_lg d-flex align-items-center"><img src="assets/images/copy.svg">Copy</button>
                                 </div>                                
@@ -187,7 +187,7 @@
                                 <div class="label-text">Client Secret ID</div>
                                 <div class="input-box-content d-flex align-items-center">
                                     <div class="kr-sg-input-text mr-3">                                       
-                                        <input readonly type="text" placeholder="cs-506d9889-749f-5a68-a100-5b3c5e42da35" class="input-text">                                        
+                                        <input readonly type="text"  [value]="editCreden.clientSecret"  class="input-text">                                        
                                     </div>
                                     <button class="kr-sg-button-primary btn_lg d-flex align-items-center"><img src="assets/images/copy.svg">Copy</button>
                                 </div>                               
@@ -212,8 +212,68 @@
                                     <label for="checkbox-1" class="checkbox-custom-label"></label>
                                 </div>   
                                 <div class="contet-sec">
-                                    <div class="primary-text">Ingest Structured Data</div>
-                                    <div class="secondary-text">Assign this scope to store the structured data in SearchAssist.</div>
+                                    <div class="primary-text">Update Structured Document</div>
+                                    <div class="secondary-text">Assign this scope to update documents using Document ID.</div>
+                                </div>
+                            </div>
+                            <div class="api-scope-check-list">
+                                <div class="kr-sg-checkbox">
+                                    <input id="checkbox-1" class="checkbox-custom" type="checkbox">
+                                    <label for="checkbox-1" class="checkbox-custom-label"></label>
+                                </div>   
+                                <div class="contet-sec">
+                                    <div class="primary-text">Get Structured Data</div>
+                                    <div class="secondary-text">Assign this scope to get the list of documents or individual documents using Document ID.</div>
+                                </div>
+                            </div>
+                            <div class="api-scope-check-list">
+                                <div class="kr-sg-checkbox">
+                                    <input id="checkbox-1" class="checkbox-custom" type="checkbox">
+                                    <label for="checkbox-1" class="checkbox-custom-label"></label>
+                                </div>   
+                                <div class="contet-sec">
+                                    <div class="primary-text">Delete Structured Data</div>
+                                    <div class="secondary-text">Assign this scope to delete the data stored in SearchAssist using Document ID.</div>
+                                </div>
+                            </div>
+                            <div class="api-scope-check-list">
+                                <div class="kr-sg-checkbox">
+                                    <input id="checkbox-1" class="checkbox-custom" type="checkbox">
+                                    <label for="checkbox-1" class="checkbox-custom-label"></label>
+                                </div>   
+                                <div class="contet-sec">
+                                    <div class="primary-text">Live search Results</div>
+                                    <div class="secondary-text">Assign this scope to get the live search results as the user is typing the query.</div>
+                                </div>
+                            </div>
+                            <div class="api-scope-check-list">
+                                <div class="kr-sg-checkbox">
+                                    <input id="checkbox-1" class="checkbox-custom" type="checkbox">
+                                    <label for="checkbox-1" class="checkbox-custom-label"></label>
+                                </div>   
+                                <div class="contet-sec">
+                                    <div class="primary-text">Search Results</div>
+                                    <div class="secondary-text">Assign this scope to get the search results as the user has submitted the search query.</div>
+                                </div>
+                            </div>
+                            <div class="api-scope-check-list">
+                                <div class="kr-sg-checkbox">
+                                    <input id="checkbox-1" class="checkbox-custom" type="checkbox">
+                                    <label for="checkbox-1" class="checkbox-custom-label"></label>
+                                </div>   
+                                <div class="contet-sec">
+                                    <div class="primary-text">Train</div>
+                                    <div class="secondary-text">Assign this scope to index the data stored in SearchAssist.</div>
+                                </div>
+                            </div>
+                            <div class="api-scope-check-list">
+                                <div class="kr-sg-checkbox">
+                                    <input id="checkbox-1" class="checkbox-custom" type="checkbox">
+                                    <label for="checkbox-1" class="checkbox-custom-label"></label>
+                                </div>   
+                                <div class="contet-sec">
+                                    <div class="primary-text">View FAQ</div>
+                                    <div class="secondary-text">Assign this scope to get the list of FAQs stored in SearchAssist.</div>
                                 </div>
                             </div>
                         </ng-container>                        
