--- a/findly-builder/src/app/components/actions/actions.component.scss
+++ b/findly-builder/src/app/components/actions/actions.component.scss
@@ -187,7 +187,9 @@
                     border: 0px;
                     margin: 0px;
                     padding: 0px;
-                    margin-left: 12px;                    
+                    margin-left: 12px;   
+                    z-index: 10;   
+                    width: auto;              
                     &::before{
                         content: "";
                         position: absolute;
