faq high fix, cred copy,search-exp typo

--- a/findly-builder/src/app/components/credentials-list/credentials-list.component.html
+++ b/findly-builder/src/app/components/credentials-list/credentials-list.component.html
@@ -42,13 +42,13 @@
     </div>
     <perfect-scrollbar class="scroll-table" >
         <div class="table-data" *ngIf="(channnelConguired && channnelConguired.length) ">
-            <div class="table-header row m-0 d-none" >
+            <div class="table-header row m-0 " >
                 <div class="col-2 title">{{"credentials.credential_name" | translate}}</div>
                 <div class="col-3 title">CHANNELS</div>                
-                <div class="col-3 title d-none">API SCOPES</div>
+                <div class="col-3 title">API SCOPES</div>
                 <div class="col-3 title">{{"credentials.last_updated" | translate}}<img src="assets/icons/dropdown_gray.svg" class="ml-1"></div>
             </div>
-            <div class="table-header row m-0" >
+            <div class="table-header row m-0 d-none" >
                 <div class="col-3 title">{{"credentials.credential_name" | translate}}</div>
                 <div class="col-3 title">CREDENTIAL USSAGE</div>                
                 <div class="col-3 title ">LAST UPDATED</div>
@@ -56,16 +56,21 @@
             </div>
             <div class="table-body-content row m-0 align-items-center" *ngFor="let data of channnelConguired | filter :[searchcredential, 'appName']" (click)="viewDetails(data)" >
                 <!-- (click)="viewDetails()" -->
-                <div class="col-3 title">{{data.appName}}</div>
+                <div class="col-2 title">{{data.appName}}</div>
                 <div class="col-3 title">{{data.appUsage}}</div>
-                <div class="col-3 title">{{data.lastModifiedOn | dateFormatPipe: 'MM-DD-YYYY hh:mm A'}}</div>
+                <div class="col-3 title"></div>
+                <div class="col-4"> <!--title text-truncate pr-5 -->
+                    <span class="last-updates">{{data.lastModifiedOn | dateFormatPipe: 'MM/DD/YYYY-hh:mm a'}} <span>by {{data.lastModifiedBy.firstName + ' ' + data.lastModifiedBy.lastName}}</span></span>
+                    <span class="actions-links" ngbTooltip='Delete' [container]='"body"' (click)="deleteCredential(data)"><img class="action_icon" src="assets/icons/delete-table.svg"></span>
+                </div>
+                <!-- <div class="col-3 title">{{data.lastModifiedOn | dateFormatPipe: 'MM/DD/YYYY-hh:mm a'}}</div>
                 <div class="col-3 title">
                     <span class="">{{data.lastModifiedBy.firstName + ' ' + data.lastModifiedBy.lastName}}</span>
-                    <span class="float-right action-links">
+                    <span class="float-right action-links"> -->
                         <!-- <span class="actions-links mr-3" ngbTooltip='Edit' [container]='"body"' (click)="editnewCredential(event,data)"><img class="action_icon" src="assets/images/edit-pencil.svg"></span> -->
-                        <span class="actions-links" ngbTooltip='Delete' [container]='"body"' (click)="deleteCredential(data)"><img class="action_icon" src="assets/icons/delete-table.svg"></span>
+                        <!-- <span class="actions-links" ngbTooltip='Delete' [container]='"body"' (click)="deleteCredential(data)"><img class="action_icon" src="assets/icons/delete-table.svg"></span>
                     </span>
-                </div>
+                </div> -->
             </div>
 
 
@@ -111,10 +116,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-4 title text-truncate pr-5">
-                    <span class="last-updates">11/08/2020 - 07:07pm <span>by Melissa Hedderman</span></span>
-                    <span class="actions-links" ngbTooltip='Delete' [container]='"body"' (click)="deleteCredential(data)"><img class="action_icon" src="assets/icons/delete-table.svg"></span>
-                </div>
+               
             </div>
         </div>
     </perfect-scrollbar>   
@@ -167,7 +169,7 @@
                             </div>
                         </div>
             
-                        <div class="switch-toggle">                
+                        <div class="switch-toggle d-none">                
                             <label class="kr-sg-toggle">
                                 <input type="checkbox" [(ngModel)]="credntial.enabled">
                                 <div class="slider"><span class="enabled">{{"credentials.push_notifications_enabled" | translate}}</span><span class="disabled">{{"credentials.push_notifications_enabled" | translate}}</span></div>
@@ -180,7 +182,7 @@
                                     <div class="kr-sg-input-text mr-3">                                       
                                         <input readonly type="text" [value]="editCreden.clientId" class="input-text">                                        
                                     </div>
-                                    <button class="kr-sg-button-primary btn_lg d-flex align-items-center"><img src="assets/images/copy.svg">Copy</button>
+                                    <button class="kr-sg-button-primary btn_lg d-flex align-items-center" (click)="copy(editCreden.clientId,clipClientId)"><img src="assets/images/copy.svg">Copy</button>
                                 </div>                                
                             </div>   
                             <div class="data-sec">
@@ -189,16 +191,16 @@
                                     <div class="kr-sg-input-text mr-3">                                       
                                         <input readonly type="text"  [value]="editCreden.clientSecret"  class="input-text">                                        
                                     </div>
-                                    <button class="kr-sg-button-primary btn_lg d-flex align-items-center"><img src="assets/images/copy.svg">Copy</button>
+                                    <button class="kr-sg-button-primary btn_lg d-flex align-items-center" (click)="copy(editCreden.clientSecret,clipclientSecret)"><img src="assets/images/copy.svg">Copy</button>
                                 </div>                               
                             </div>                          
                         </div>                   
                     </div>
                     <div id="APIscopes" class="container tab-pane fade p-0">
                         <ng-container>
-                            <div class="api-scope-check-list">
+                            <div class="api-scope-check-list selected-item">
                                 <div class="kr-sg-checkbox">
-                                    <input id="checkbox-1" class="checkbox-custom" type="checkbox">
+                                    <input id="checkbox-1" class="checkbox-custom"  type="checkbox">
                                     <label for="checkbox-1" class="checkbox-custom-label"></label>
                                 </div>   
                                 <div class="contet-sec">
@@ -206,70 +208,70 @@
                                     <div class="secondary-text">Assign this scope to store the structured data in SearchAssist.</div>
                                 </div>
                             </div>
-                            <div class="api-scope-check-list">
+                            <div class="api-scope-check-list selected-item">
                                 <div class="kr-sg-checkbox">
-                                    <input id="checkbox-1" class="checkbox-custom" type="checkbox">
-                                    <label for="checkbox-1" class="checkbox-custom-label"></label>
+                                    <input id="checkbox-2" class="checkbox-custom" type="checkbox">
+                                    <label for="checkbox-2" class="checkbox-custom-label"></label>
                                 </div>   
                                 <div class="contet-sec">
                                     <div class="primary-text">Update Structured Document</div>
                                     <div class="secondary-text">Assign this scope to update documents using Document ID.</div>
                                 </div>
                             </div>
-                            <div class="api-scope-check-list">
+                            <div class="api-scope-check-list selected-item">
                                 <div class="kr-sg-checkbox">
-                                    <input id="checkbox-1" class="checkbox-custom" type="checkbox">
-                                    <label for="checkbox-1" class="checkbox-custom-label"></label>
+                                    <input id="checkbox-3" class="checkbox-custom" type="checkbox">
+                                    <label for="checkbox-3" class="checkbox-custom-label"></label>
                                 </div>   
                                 <div class="contet-sec">
                                     <div class="primary-text">Get Structured Data</div>
                                     <div class="secondary-text">Assign this scope to get the list of documents or individual documents using Document ID.</div>
                                 </div>
                             </div>
-                            <div class="api-scope-check-list">
+                            <div class="api-scope-check-list selected-item">
                                 <div class="kr-sg-checkbox">
-                                    <input id="checkbox-1" class="checkbox-custom" type="checkbox">
-                                    <label for="checkbox-1" class="checkbox-custom-label"></label>
+                                    <input id="checkbox-4" class="checkbox-custom" type="checkbox">
+                                    <label for="checkbox-4" class="checkbox-custom-label"></label>
                                 </div>   
                                 <div class="contet-sec">
                                     <div class="primary-text">Delete Structured Data</div>
                                     <div class="secondary-text">Assign this scope to delete the data stored in SearchAssist using Document ID.</div>
                                 </div>
                             </div>
-                            <div class="api-scope-check-list">
+                            <div class="api-scope-check-list selected-item">
                                 <div class="kr-sg-checkbox">
-                                    <input id="checkbox-1" class="checkbox-custom" type="checkbox">
-                                    <label for="checkbox-1" class="checkbox-custom-label"></label>
+                                    <input id="checkbox-5" class="checkbox-custom" type="checkbox">
+                                    <label for="checkbox-5" class="checkbox-custom-label"></label>
                                 </div>   
                                 <div class="contet-sec">
                                     <div class="primary-text">Live search Results</div>
                                     <div class="secondary-text">Assign this scope to get the live search results as the user is typing the query.</div>
                                 </div>
                             </div>
-                            <div class="api-scope-check-list">
+                            <div class="api-scope-check-list selected-item">
                                 <div class="kr-sg-checkbox">
-                                    <input id="checkbox-1" class="checkbox-custom" type="checkbox">
-                                    <label for="checkbox-1" class="checkbox-custom-label"></label>
+                                    <input id="checkbox-6" class="checkbox-custom" type="checkbox">
+                                    <label for="checkbox-6" class="checkbox-custom-label"></label>
                                 </div>   
                                 <div class="contet-sec">
                                     <div class="primary-text">Search Results</div>
                                     <div class="secondary-text">Assign this scope to get the search results as the user has submitted the search query.</div>
                                 </div>
                             </div>
-                            <div class="api-scope-check-list">
+                            <div class="api-scope-check-list selected-item">
                                 <div class="kr-sg-checkbox">
-                                    <input id="checkbox-1" class="checkbox-custom" type="checkbox">
-                                    <label for="checkbox-1" class="checkbox-custom-label"></label>
+                                    <input id="checkbox-7" class="checkbox-custom" type="checkbox">
+                                    <label for="checkbox-7" class="checkbox-custom-label"></label>
                                 </div>   
                                 <div class="contet-sec">
                                     <div class="primary-text">Train</div>
                                     <div class="secondary-text">Assign this scope to index the data stored in SearchAssist.</div>
                                 </div>
                             </div>
-                            <div class="api-scope-check-list">
+                            <div class="api-scope-check-list selected-item">
                                 <div class="kr-sg-checkbox">
-                                    <input id="checkbox-1" class="checkbox-custom" type="checkbox">
-                                    <label for="checkbox-1" class="checkbox-custom-label"></label>
+                                    <input id="checkbox-8" class="checkbox-custom" type="checkbox">
+                                    <label for="checkbox-8" class="checkbox-custom-label"></label>
                                 </div>   
                                 <div class="contet-sec">
                                     <div class="primary-text">View FAQ</div>
@@ -282,7 +284,7 @@
             </div>
         </perfect-scrollbar>          
         <div class="modal-footer">
-            <button class="kr-sg-button-primary btn_lg" (click)="saveEditCredential()">{{"credentials.add" | translate}}</button>
+            <button class="kr-sg-button-primary btn_lg" (click)="saveEditCredential()">{{"credentials.save"| translate}}</button>
             <button class="kr-sg-button-secondary btn_lg" (click)="closeModalPopup()">{{"credentials.cancel" | translate}}</button>
         </div>
     </kr-modal> 
